Make breadcrumb handle overflowing content correctly

--- a/src/@koop-components/page-components/breadcrumb/_breadcrumb.scss
+++ b/src/@koop-components/page-components/breadcrumb/_breadcrumb.scss
@@ -1,15 +1,6 @@
 .breadcrumb {
   padding: .25em 0;
 
-  .row & {
-    margin-top: -1em;
-    margin-bottom: 1em;
-  }
-
-  .row &:only-child {
-    margin-bottom: -1em;
-  }
-
   p {
     position: absolute;
     left: -999em;
@@ -22,19 +13,22 @@
     p {
       position: relative;
       left: auto;
+      margin: 0 .5em 0 0;
       display: inline-block;
     }
 
   }
 
   ol {
-    display: inline-block;
+    display: inline;
+    list-style: none;
+    margin: 0;
     padding: 0;
   }
 
    li {
-      padding: 0 0 0 .5em;
-      display: inline-block;
+      padding: 0 .5em 0 0;
+      display: inline;
 
       a {
         text-decoration: none;
@@ -50,10 +44,8 @@
         margin-left: .5em;
       }
 
-      &:last-child {
-        &::after {
-          display: none;
-        }
+      &:last-child::after {
+        display: none;
       }
     }
 
